--- a/style.css
+++ b/style.css
@@ -1,3 +1,131 @@
 body {
-    background-color: #C00000;
+    /*background-color: #C00000;*/
+    background-color: #fff;
+    font-family: 'Roboto', 'Helvetica Neue', sans-serif;
+    list-style-type: armenian;
+    font-size: 62.5%;
+    font-weight: 200;
+}
+
+@media screen and (max-width: 1200px) {
+    body {
+        font-size: 50%;
+    }
+}
+
+* {
+    margin: 0 auto;
+    padding: 0;
+}
+
+#Header {
+    text-align: center;
+    font-size: 4em;
+    height: 170px;
+    background-color: #c00000;
+    color: white;
+    border-bottom: 1px solid black;
+}
+
+#Header h1 {
+    padding-top: 60px;
+}
+
+#Title {
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    font-size: 3em;
+}
+
+#Container {
+    position: relative;
+    width: 100%;
+}
+
+strong {
+    font-weight: 400;
+}
+
+em {
+    font-style: italic;
+}
+
+.thin {
+    font-weight: 100;
+}
+
+.med {
+    font-weight: 300;
+}
+
+.spaced {
+    letter-spacing: 0.18em;
+    margin-right: -0.18em;
+}
+
+#Gold {
+    background-color: #D7B444;
+}
+
+#Gold h1 {
+    font-size: 2.5em;
+}
+
+#Silver {
+    background-color: #93A6B7;
+}
+
+#Silver h1 {
+    font-size: 2.2em;
+}
+
+#Bronze {
+    background-color: #CE5218;
+    height: 150px;
+}
+
+#Bronze h1 {
+    font-size: 1.7em;
+}
+
+.BoxSponsorLeft {
+    float: left;
+    text-align: right;
+    width: 30%;
+    margin-right: 50px;
+    font-size: 4em;
+    vertical-align: bottom;
+    position: absolute;
+    bottom: 0;
+}
+
+.BoxSponsorLeft h1 {
+    margin-top: -0.2em;
+}
+
+.BoxSponsorRight {
+    float: right;
+    text-align: left;
+    width: 65%;
+    font-size: 2.4em;
+}
+
+li {
+    list-style-type: none;
+}
+
+li:before {
+    content: "-"; /* Insert content that looks like bullets */
+    padding-right: 12px;
+}
+
+.sbox {
+    margin-bottom: 20px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 20px;
+    overflow: auto;
+    color: #fff;
+    position: relative;
 }
