--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     list-style-type: armenian;
     font-size: 62.5%;
     font-weight: 200;
+    
 }
 
 @media screen and (max-width: 1200px) {
@@ -41,6 +42,26 @@ body {
 #Container {
     position: relative;
     width: 100%;
+}
+
+nav {
+    
+}
+
+nav ul {
+    
+}
+
+nav ul li {
+    display: inline-block;
+    text-decoration: none;
+}
+
+nav ul li a {
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
 }
 
 strong {
@@ -82,7 +103,7 @@ em {
 
 #Bronze {
     background-color: #CE5218;
-    height: 150px;
+    height: 180px;
 }
 
 #Bronze h1 {
@@ -109,6 +130,7 @@ em {
     text-align: left;
     width: 65%;
     font-size: 2.4em;
+    line-height: 1.8em;
 }
 
 li {
@@ -121,7 +143,7 @@ li:before {
 }
 
 .sbox {
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     padding: 20px;
