--- a/style.css
+++ b/style.css
@@ -45,7 +45,14 @@ body {
 }
 
 nav {
-    
+    width: 100%;
+    text-align: center;
+    font-size: 3em;
+    font-weight: 100;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: rgba(0, 0, 0, 0.21);
+    box-shadow: 0 0 5px #fff;
 }
 
 nav ul {
@@ -54,14 +61,18 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    text-decoration: none;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 nav ul li a {
+    text-decoration: none;
+    color: white;
 }
 
 nav ul li a:hover {
     text-decoration: underline;
+    font-weight: 200;
 }
 
 strong {
@@ -133,11 +144,11 @@ em {
     line-height: 1.8em;
 }
 
-li {
+.BoxSponsorRight li {
     list-style-type: none;
 }
 
-li:before {
+.BoxSponsorRight li:before {
     content: "-"; /* Insert content that looks like bullets */
     padding-right: 12px;
 }
@@ -154,12 +165,43 @@ li:before {
 
 #MainTitle {
     width: 100%;
-    height: 100%;
+    text-align: center;
+    position: absolute;
+    margin-top: 300px;
+    left: 0;
+    font-size: 10em;
+    /*background-color: rgba(255, 255, 255, 0.5);*/
+    background-color: rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 5px #fff;
+    z-index: 500;
 }
 
 #Footer {
-    position: absolute;
+    position: fixed;
+    text-shadow: 0px 0px #fff;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 30px;
+    font-size: 2em;
+    text-align: center;
 }
+
+#FrontImage {
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+    position: absolute;
+    z-index: 100;
+    
+}
+
+#FrontImageImage {
+    width: 50%;
+}
+
+.RedBack {
+    background-color: #c00000;
+    color: white;
+}
+
+
