--- a/style.css
+++ b/style.css
@@ -188,11 +188,10 @@ em {
 
 #FrontImage {
     text-align: center;
-    margin: 0 auto;
+    margin-top: 30px;
     width: 100%;
     position: absolute;
     z-index: 100;
-    
 }
 
 #FrontImageImage {
