--- a/style.css
+++ b/style.css
@@ -188,7 +188,9 @@ em {
     width: 100%;
     height: 30px;
     font-size: 2em;
-    text-align: center;
+    text-align: right;
+    padding-right: 10px;
+    z-index: 1000;
 }
 
 #FrontImage {
@@ -221,3 +223,28 @@ em {
 }
 
 
+
+#Deet {
+    border: 1px solid black;
+    height: 300px;
+    width: 90%;
+    margin: 30px auto;
+    text-align: center;
+}
+
+#Deet h1 {
+    text-shadow: 0 0 20px #fff;
+    padding: 10px;
+    font-weight: 100;
+    font-size: 4em;
+}
+
+#Deet h2 {
+    padding: 5px;
+    font-weight: 200;
+    font-size: 3em;
+}
+
+#Deet img {
+    float: left;
+}
