--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ em {
 #Deet {
     border: 1px solid black;
     height: 300px;
-    width: 90%;
+    width: 80%;
     margin: 30px auto;
     text-align: center;
 }
@@ -243,6 +243,12 @@ em {
     padding: 5px;
     font-weight: 200;
     font-size: 3em;
+}
+
+#Deet h3 {
+    padding: 5px;
+    font-weight: 200;
+    font-size: 2.8em;
 }
 
 #Deet img {
