--- a/style.css
+++ b/style.css
@@ -230,11 +230,18 @@ em {
     width: 80%;
     margin: 30px auto;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-top-left-radius: 150px;
+    border-bottom-left-radius: 150px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    box-shadow: 0 0 20px #fff;
 }
 
 #Deet h1 {
     text-shadow: 0 0 20px #fff;
-    padding: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     font-weight: 100;
     font-size: 4em;
 }
@@ -253,4 +260,5 @@ em {
 
 #Deet img {
     float: left;
+    border-radius: 50%;
 }
