--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     list-style-type: armenian;
     font-size: 62.5%;
     font-weight: 200;
-    
 }
 
 @media screen and (max-width: 1200px) {
@@ -42,6 +41,7 @@ body {
 #Container {
     position: relative;
     width: 100%;
+    height: 100%;
 }
 
 nav {
@@ -53,6 +53,8 @@ nav {
     padding-bottom: 30px;
     background-color: rgba(0, 0, 0, 0.4);
     box-shadow: 0 0 5px #fff;
+    position: relative;
+    z-index: 200;
 }
 
 nav ul {
@@ -170,15 +172,30 @@ em {
 
 #MainTitle {
     width: 100%;
+    height: 100%;
     text-align: center;
-    position: absolute;
-    margin-top: 300px;
-    left: 0;
-    font-size: 10em;
+    position: fixed;
+    top: 0;
+    /* margin-top: 300px; */
+    /* left: 0; */
     /*background-color: rgba(255, 255, 255, 0.5);*/
+    /* padding-top: 30em; */
+    display: table;
+    z-index: 500;
+}
+
+#MainTitle h1 {
+    width: 100%;
+    font-size: 10em;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#MainTitle h1 span {
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     box-shadow: 0 0 5px #fff;
-    z-index: 500;
+    display: inline-block;
 }
 
 #Footer {
@@ -195,14 +212,16 @@ em {
 
 #FrontImage {
     text-align: center;
-    margin-top: 30px;
     width: 100%;
-    position: absolute;
+    height: 100%;
+    position: fixed;
+    top: 0;
     z-index: 100;
 }
 
 #FrontImageImage {
-    width: 50%;
+    height: 86%;
+    margin-top: 7%;
 }
 
 .RedBack {
