--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ nav {
     /* box-shadow: 0 0 2px rgba(0,0,0,0.5); */
     position: relative;
     z-index: 1000;
+    text-shadow: 0 0 1px white;
+    letter-spacing: 1px;
 }
 
 nav ul {
@@ -63,8 +65,7 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding: 0 2em;
 }
 
 nav ul li a {
@@ -74,7 +75,6 @@ nav ul li a {
 
 nav ul li a:hover {
     text-decoration: underline;
-    font-weight: 300;
 }
 
 strong {
