--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ body {
 #Title {
     text-align: center;
     padding-top: 50px;
-    padding-bottom: 20px;
+    padding-bottom: 2em;
+    font-weight: 300;
     font-size: 3em;
 }
 
@@ -102,8 +103,7 @@ em {
 }
 
 #Gold {
-    /*background-color: #D7B444;*/
-    background-color: rgba(215, 180, 68, 0.6);
+    background-color: #CFAF48;
 }
 
 #Gold h1 {
@@ -111,8 +111,7 @@ em {
 }
 
 #Silver {
-    /*background-color: #93A6B7;*/
-    background-color: rgba(147, 166, 183, 0.6);
+    background-color: #7B9DA8;
 }
 
 #Silver h1 {
@@ -121,7 +120,7 @@ em {
 
 #Bronze {
     /*background-color: #CE5218;*/
-    background-color: rgba(206, 82, 24, 0.6);
+    background-color: rgba(206, 82, 24, 1);
     height: 180px;
 }
 
@@ -149,24 +148,29 @@ em {
     text-align: left;
     width: 65%;
     font-size: 2.4em;
+    font-weight: 300;
     line-height: 1.8em;
 }
 
 .BoxSponsorRight li {
     list-style-type: none;
+    padding-left: 14px;
 }
 
 .BoxSponsorRight li:before {
-    content: "-"; /* Insert content that looks like bullets */
-    padding-right: 12px;
+    content: "›"; /* Insert content that looks like bullets */
+    display: inline-block;
+    width: 14px;
+    font-weight: 900;
+    margin-left: -14px;
 }
 
 .sbox {
     margin-bottom: 50px;
     /*border-top: 1px solid rgba(0, 0, 0, 0.5);
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);*/
-    border-top: 1px solid rgba(255, 255, 255, 0.6);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+    border-top: 3px solid white;
+    border-bottom: 3px solid white;
     padding: 20px;
     overflow: auto;
     color: #fff;
