--- a/style.css
+++ b/style.css
@@ -47,12 +47,10 @@ body {
 
 nav {
     width: 100%;
-    text-align: center;
     font-size: 3em;
     font-weight: 200;
     padding-top: 30px;
     padding-bottom: 30px;
-    display: table;
     background-color: rgba(0, 0, 0, 0.4);
     position: relative;
     z-index: 1000;
@@ -61,22 +59,12 @@ nav {
 }
 
 nav ul {
-    
+    text-align: center;
 }
 
 nav ul li {
-    display: table-cell;
-    width: 18%;
-    text-align: center;
-    white-space: nowrap;
-    padding: 0 2em;
-}
-
-@media (max-width: 800px) {
-    #nav li {
-        display: block;
-        width: 100%;
-    }
+    display: inline-block;
+    padding: 0 4%;
 }
 
 nav ul li a {
