--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
     font-weight: 200;
 }
 
+@media only screen (max-device-width: 800px){
+      body {
+          font-size: 80%;
+          font-weight: 900;
+      }
+}
+
 * {
     margin: 0 auto;
     padding: 0;
@@ -244,14 +251,14 @@ em {
 #Deet h1 {
     text-shadow: 0 0 20px #fff;
     padding-top: 10px;
-    font-weight: 100;
+    font-weight: 200;
     font-size: 4em;
 }
 
 #Deet h2 {
     padding: 5px;
-    font-weight: 200;
     font-size: 2.5em;
+    font-weight: 200;
 }
 
 #Deet h3 {
