--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-weight: 200;
 }
 
-@media only screen and (max-device-width: 800px){
+@media only screen and (max-width: 800px){
       body {
           font-size: 80%;
           font-weight: 900;
@@ -70,6 +70,20 @@ nav ul li {
 @media screen and (max-width: 1000px) {
     nav ul li {
         padding: 0 2%;
+    }
+}
+
+@media only screen and (max-width: 800px){
+    nav {
+        padding-top: 0;
+        border-bottom: 1px solid white;
+        margin-bottom: 40px;
+    background-color: rgba(0, 0, 0, 0.7);
+    }
+    nav ul li {
+        display: block;
+        padding-bottom: 10px;
+        padding-top: 15px;
     }
 }
 
@@ -156,6 +170,24 @@ em {
     line-height: 1.8em;
 }
 
+@media only screen and (max-width: 1050px){
+    .BoxSponsorLeft {
+        float: none;
+        text-align: center;
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+        vertical-align: baseline;
+    }
+    .BoxSponsorRight {
+        float: none;
+        width: 100%;
+    }
+    #Bronze {
+        height: auto;
+    }
+}
+
 .BoxSponsorRight li {
     list-style-type: none;
     padding-left: 14px;
@@ -206,6 +238,24 @@ em {
     text-shadow: 0 0 5px black;
 }
 
+@media only screen and (max-width: 800px){
+    #MainTitle {
+        height: auto;
+        position: relative;
+        display: block;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+        margin: 10px auto;
+    }
+    #MainTitle h1 {
+        display: block;
+        font-size: 8em;
+    }
+    #MainTitle h1 span {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+}
+
 #Footer {
     position: fixed;
     text-shadow: 0px 0px #fff;
@@ -219,6 +269,18 @@ em {
     font-weight: 200;
 }
 
+@media only screen and (max-width: 800px){
+    #Footer {
+        margin-top: 40px;
+        position: relative;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.7);
+        border-top: 1px solid white;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+
 #FrontImage {
     text-align: center;
     width: 100%;
@@ -230,6 +292,12 @@ em {
 
 #FrontImageImage {
     height: 80%;
+}
+
+@media only screen and (max-width: 800px){
+    #FrontImageImage {
+        width: 100%;
+    }
 }
 
 .RedBack {
@@ -246,6 +314,12 @@ em {
     margin: 30px auto;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+@media only screen and (max-width: 800px){
+      #Deet {
+          width: 100%;
+      }
 }
 
 #Deet h1 {
