--- a/style.css
+++ b/style.css
@@ -12,6 +12,18 @@ body {
       }
 }
 
+@media only screen and (max-width: 870px){
+      body {
+          font-size: 100%;
+      }
+}
+
+@media only screen and (max-width: 600px){
+      body {
+          font-size: 70%;
+      }
+}
+
 * {
     margin: 0 auto;
     padding: 0;
