--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ em {
         text-align: center;
         background-color: rgba(0, 0, 0, 0.7);
         border-top: 1px solid white;
+        border-bottom: 1px solid white;
         padding-top: 30px;
         padding-bottom: 30px;
     }
