--- a/style.css
+++ b/style.css
@@ -8,19 +8,19 @@ body {
 
 @media only screen and (max-width: 1000px){
       body {
-          font-size: 80%;
+          font-size: 110%;
       }
 }
 
 @media only screen and (max-width: 870px){
       body {
-          font-size: 70%;
+          font-size: 90%;
       }
 }
 
 @media only screen and (max-width: 600px){
       body {
-          font-size: 65%;
+          font-size: 80%;
       }
 }
 
@@ -91,7 +91,7 @@ nav ul li {
         display: block;
         opacity: 0;
         height: 0px;
-        transition: all 1s ease-in-out;
+        transition: all 0.3 ease-in-out;
         padding-bottom: 0;
         padding-top: 0;
     }
