--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ nav ul li.show {
         transition: all 0.5s ease-in-out;
     }
     nav ul li {
-        display: block;
+        display: block !important;
         max-height: 0;
         padding-bottom: 0;
         padding-top: 0;
