--- a/style.css
+++ b/style.css
@@ -266,7 +266,8 @@ em {
     width: auto;
     background-color: rgba(0, 153, 230, 0.7);
     font-size: 0.5em;
-    box-shadow: 0 0 20px 5px black;
+    border: 1px solid white;
+    box-shadow: 0 0 10px black;
     border-radius: 10px;
     text-shadow: 0 0 2px black;
     color: white;
@@ -280,6 +281,7 @@ em {
     background-color: rgba(255,255,255,0.9);
     color: rgb(0, 153, 230);
     text-shadow: none;
+    border: none;
 }
 
 @media only screen and (max-width: 1000px){
