--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ em {
     background-repeat: repeat;
     background-size: 150px;
     color: white;
-    background-image: url(./background2.png);
+    background-image: url(img/background2.png);
 }
 
 
