--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ em {
     background-repeat: repeat;
     background-size: 150px;
     color: white;
-    background-image: url(./background2.png);
+    background-image: url(./imgs/background2.png);
 }
 
 
