--- a/style.css
+++ b/style.css
@@ -1,369 +1,14 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 body {
-    background-color: #fff;
-    font-family: 'Roboto', 'Helvetica Neue', sans-serif;
-    list-style-type: armenian;
-    font-size: 62.5%;
-    font-weight: 200;
-}
-
-@media only screen and (max-width: 1000px){
-      body {
-          font-size: 110%;
-      }
-}
-
-@media only screen and (max-width: 870px){
-      body {
-          font-size: 90%;
-      }
-}
-
-@media only screen and (max-width: 600px){
-      body {
-          font-size: 80%;
-      }
-}
-
-* {
-    margin: 0 auto;
-    padding: 0;
-}
-
-#Header {
-    text-align: center;
-    font-size: 4em;
-    height: 170px;
-    background-color: #c00000;
-    color: white;
-    border-bottom: 1px solid black;
-}
-
-#Header h1 {
-    padding-top: 60px;
-}
-
-#Title {
-    text-align: center;
-    padding-top: 50px;
-    padding-bottom: 2em;
-    font-weight: 300;
-    font-size: 3em;
-}
-
-#Container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-nav {
-    width: 100%;
-    font-size: 3em;
-    font-weight: 200;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background-color: rgba(0, 0, 0, 0.4);
-    position: relative;
-    z-index: 1000;
-    text-shadow: 0 0 1px white;
-    letter-spacing: 1px;
-}
-
-nav ul {
-    text-align: center;
-}
-
-nav ul li {
-    display: inline-block;
-    padding: 0 4%;
-}
-
-@media only screen and (max-width: 1000px){
-    nav {
-        padding-top: 0;
-        padding-bottom: 0;
-        border-bottom: 1px solid white;
-        margin-bottom: 40px;
-        font-size: 4em;
-        background-color: rgba(0, 0, 0, 0.7);
-        transition: all 0.5s ease-in-out;
-    }
-    nav ul li {
-        display: block;
-        max-height: 0;
-        padding-bottom: 0;
-        padding-top: 0;
-        opacity: 0;
-        transition: all 0.3s ease-in-out;
-    }
-    nav ul li.show {
-        opacity: 1;
-        max-height: 10em;
-        padding-bottom: 20px;
-        padding-top: 20px;
-    }
-}
-
-nav ul li a {
-    text-decoration: none;
-    border-bottom: 1px solid;
-    border-bottom-color: rgba(255,255,255,0);
-    color: white;
-    transition: all 0.2s ease;
-}
-
-nav ul li a:hover {
-    border-bottom-color: rgba(255,255,255,0.8);
-    text-shadow: 0 0 1px white, 0 0 1px white;
-}
-
-strong {
-    font-weight: 400;
-}
-
-em {
-    font-style: italic;
-}
-
-.thin {
-    font-weight: 100;
-}
-
-.med {
-    font-weight: 300;
-}
-
-.spaced {
-    letter-spacing: 0.18em;
-    margin-right: -0.18em;
-}
-
-#Gold {
-    background-color: #CFAF48;
-}
-
-#Gold h1 {
-    font-size: 2.5em;
-}
-
-#Silver {
-    background-color: #7B9DA8;
-}
-
-#Silver h1 {
-    font-size: 2.2em;
-}
-
-#Bronze {
-    background-color: rgba(206, 82, 24, 1);
-    height: 180px;
-}
-
-#Bronze h1 {
-    font-size: 1.9em;
-}
-
-.BoxSponsorLeft {
-    float: left;
-    text-align: right;
-    width: 30%;
-    margin-right: 50px;
-    font-size: 4em;
-    vertical-align: bottom;
-    position: absolute;
-    bottom: 0;
-}
-
-.BoxSponsorLeft h1 {
-    margin-top: -0.2em;
-}
-
-.BoxSponsorRight {
-    float: right;
-    text-align: left;
-    width: 65%;
-    font-size: 2.4em;
-    font-weight: 300;
-    line-height: 1.8em;
-}
-
-@media only screen and (max-width: 1050px){
-    .BoxSponsorLeft {
-        float: none;
-        text-align: center;
-        width: 100%;
-        margin: 0 auto;
-        position: relative;
-        vertical-align: baseline;
-    }
-    .BoxSponsorRight {
-        float: none;
-        width: 100%;
-    }
-    #Bronze {
-        height: auto;
-    }
-}
-
-.BoxSponsorRight li {
-    list-style-type: none;
-    padding-left: 14px;
-}
-
-.BoxSponsorRight li:before {
-    content: "›";
-    display: inline-block;
-    width: 14px;
-    font-weight: 900;
-    margin-left: -14px;
-}
-
-.sbox {
-    margin-bottom: 50px;
-    border-top: 3px solid white;
-    border-bottom: 3px solid white;
-    padding: 20px;
-    overflow: auto;
-    color: #fff;
-    position: relative;
-    z-index: 1000;
-}
-
-#MainTitle {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    display: table;
-    z-index: 500;
-}
-
-#MainTitle h1 {
-    width: 100%;
-    font-size: 10em;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-#MainTitle h1 span {
-    width: 100%;
-    background-color: rgba(0, 5, 10, 0.6);
-    display: inline-block;
-    letter-spacing: 0.15em;
-    font-weight: 100;
-    text-shadow: 0 0 5px black;
-}
-
-@media only screen and (max-width: 1000px){
-    #MainTitle {
-        height: auto;
-        position: relative;
-        display: block;
-        border-top: 1px solid white;
-        border-bottom: 1px solid white;
-        margin: 10px auto;
-    }
-    #MainTitle h1 {
-        display: block;
-        font-size: 8em;
-    }
-    #MainTitle h1 span {
-        background-color: rgba(0, 0, 0, 0.7);
-    }
-}
-
-#Footer {
-    position: fixed;
-    text-shadow: 0px 0px #fff;
-    bottom: 10px;
-    right: 3px;
-    width: 100%;
-    font-size: 2em;
-    text-align: right;
-    padding-right: 10px;
-    z-index: 1000;
-    font-weight: 200;
-}
-
-@media only screen and (max-width: 1000px){
-    #Footer {
-        margin-top: 40px;
-        position: relative;
-        text-align: center;
-        background-color: rgba(0, 0, 0, 0.7);
-        border-top: 1px solid white;
-        border-bottom: 1px solid white;
-        padding-top: 30px;
-        padding-bottom: 30px;
-    }
-}
-
-#FrontImage {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 95px;
-    z-index: 100;
-}
-
-#FrontImageImage {
-    height: 80%;
-}
-
-@media only screen and (max-width: 1000px){
-    #FrontImageImage {
-        width: 100%;
-    }
-}
-
-.RedBack {
-    background-repeat: repeat;
-    background-size: 150px;
-    color: white;
-    background-image: url(./imgs/background2.png);
-}
-
-
-#Deet {
-    border: 1px solid black;
-    width: 80%;
-    margin: 30px auto;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-@media only screen and (max-width: 1000px){
-      #Deet {
-          width: 100%;
-      }
-}
-
-#Deet h1 {
-    text-shadow: 0 0 20px #fff;
-    padding-top: 10px;
-    font-weight: 200;
-    font-size: 4em;
-}
-
-#Deet h2 {
-    padding: 5px;
-    font-size: 2.5em;
-    font-weight: 200;
-}
-
-#Deet h3 {
-    padding: 5px;
-    font-weight: 200;
-    font-size: 2.2em;
-}
-
-#Deet a {
-    color: #aabbff;
-    text-decoration: none;
-}
-
-#Deet a:hover {
-    text-decoration: underline;
+  background-image: url('./imgs/foggy_birds/foggy_birds.png');
+  background-repeat: repeat;
+  background-size: 200px;
+  
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
