--- a/css/menu.css
+++ b/css/menu.css
@@ -1,13 +1,13 @@
 header {
   width: 100%;
-  background-color: rgba(100, 230, 255, 1);
   margin: 0;
-  
-  border-bottom: 5px solid rgba(0,200,255,1);
+
+  background-color: rgba(11, 150, 120, 0.05);
+  border-bottom: 5px solid rgba(11,150,120,0.25);
 }
 
 nav {
-  
+  border-bottom: 1px solid white;
 }
 
 nav ul {
@@ -20,7 +20,7 @@ nav ul {
 
 nav ul li {
   display: none;
-  
+
   font-size: 2rem;
   font-weight: 300;
   letter-spacing: 1px;
@@ -31,16 +31,19 @@ nav ul li.show {
 }
 
 nav ul li a {
-  color: #555;
+  color: #888;
   text-decoration: none;
   outline: none;
   display: block;
   padding: 0.4em 1em;
+
+  transition: 0.2s all ease-in-out;
 }
 
 nav ul a:hover {
-  background-color: #eee;
-  box-shadow: 0 5px 0 0 #aaa;
+  color: #555;
+  background-color: rgba(255,255,255,0.5);
+  box-shadow: 0 5px 0 0 rgba(255,255,255,0.2);
 }
 
 #menu {
@@ -59,15 +62,15 @@ nav ul a:hover {
     justify-content: center;
     align-items: center;
   }
-  
+
   nav ul li {
     display: block;
   }
-  
+
   nav ul li a {
     padding: 0.5em 1em;
   }
-  
+
   #menu {
     display: none;
   }
