--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,15 @@
 main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row  wrap;
-  align-items: center;
-  justify-content: center;
+  -ms-flex-flow: row  wrap;
+      flex-flow: row  wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 
   padding: 2em 0;
 }
