--- a/css/home.css
+++ b/css/home.css
@@ -22,22 +22,24 @@ main {
 }
 
 #MainTitle h1 span {
-  color: #444;
+  color: #333;
   font-size: 5.8rem;
+  font-family: 'Cormorant Unicase', serif;
   font-weight: 300;
   letter-spacing: 0.18em;
-  text-shadow: 3px 0.5px 0 rgba(255, 200, 50, 1), -3px 0.5px 0 rgba(20, 220, 255, 1);
+/*  text-shadow: 3px 0.5px 0 rgba(255, 200, 50, 1), -3px 0.5px 0 rgba(20, 220, 255, 1);*/
+  text-shadow: 3px 0.5px 0 rgba(255, 200, 50, 1), 0 0 40px #444;
 }
 
 #MainTitle h2 {
-  color: #5F5;
-  font-family: Parisienne, sans-serif;
+/*  color: #5F5;*/
+  color: rgba(255, 200, 50, 1);
+  font-family: Parisienne, serif;
   font-weight: 400;
   font-size: 5rem;
-  text-shadow: 0 0 3px rgba(255,255,255,1);
-
+  text-shadow: 0 0 1px black, 0 0 40px #444;
   margin: 0;
-  margin-top: -1em;
+  margin-top: -0.4em;
   padding: 0;
 }
 
@@ -46,7 +48,7 @@ footer {
   bottom: 0;
   right: 0;
   padding: 1em;
-
+  text-align: right;
   color: #555;
   font-style: italic;
 }
