--- a/css/newindex2.css
+++ b/css/newindex2.css
@@ -29,8 +29,9 @@ body {
 }
 
 .parallax {
-    height: 500px; /* fallback for older browsers */
+    height: 700px; /* fallback for older browsers */
     height: 100vh;
+    min-height: 700px;
     overflow-x: hidden;
     overflow-y: auto;
     -webkit-perspective: 300px;
@@ -39,10 +40,11 @@ body {
 
 .parallax__group {
     position: relative;
-    height: 500px; /* fallback for older browsers */
+    height: 700px; /* fallback for older browsers */
     height: 100vh;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+    min-height: 700px;
+/*    -webkit-transform-style: preserve-3d;*/
+/*    transform-style: preserve-3d;*/
 }
 
 .parallax__layer {
@@ -71,19 +73,16 @@ body {
 #group1 .parallax__layer--base {
     background-color: white;
 }
-#group1 img {
-    height: 100vh;
+#group1 h1 {
+    margin-top: 10%;
+    font-size: 5em;
+    letter-spacing: 0.2em;
+    text-align: center;
 }
 #group1 p {
-    font-family: 'Josefin Slab', serif;
-    font-weight: 100;
-    top: 20%;
-    right: 5%;
-    letter-spacing: 0.2em;
-    position: absolute;
-    font-size: 5em;
+    text-align: center;
+    font-size: 2em;
     color: #555;
-    text-align: right;
 }
 
 #group2 {
@@ -131,16 +130,6 @@ body {
     background: rgb(255,241,100);
 }
 
-
-
-#logo {
-    position: absolute;
-    left: 30%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
 #foottop {
     position: absolute;
     width: 100%;
@@ -150,4 +139,60 @@ body {
     padding-top: 10px;
     font-weight: 100;
     z-index: 1000;
+}
+
+.centre {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    max-height: 700px;
+    overflow: scroll;
+}
+
+#leftcontact {
+    width: 50%;
+    float: left;
+}
+
+#rightcontact {
+    width: 50%;
+    float: right;
+}
+
+.Deet {
+    border-radius: 10px;
+    margin: 15px auto;
+    padding: 5px 1em;
+    width: 18em;
+    color: #333;
+    font-family: Roboto, sans-serif;
+    text-align: center;
+    background-color: rgba(0,0,0,0.05);
+}
+
+.Deet h1 {
+    padding: 0;
+    font-weight: 700;
+    font-size: 1.4em;
+}
+
+.Deet h2 {
+    padding: 0;
+    margin: 0;
+    font-weight: 400;
+    font-size: 1.3em;
+}
+
+.Deet h3 {
+    padding: 0;
+    margin: 0;
+    font-weight: 300;
+    font-size: 1em;
+}
+
+.Deet a {
+    text-decoration: none;
+    color: #09F;
 }
