--- a/css/newindex2.css
+++ b/css/newindex2.css
@@ -1,33 +1,8 @@
-body, html {
-    overflow: hidden;
-}
-
-body {
-    font-size: 62.5%;
-}
-
-* {
-    margin:0;
-    padding:0;
-}
-
-.parallax {
-    font-size: 200%;
-}
-
-/* centre the content in the parallax layers */
-.title {
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    font-size: 5em;
-    color: white;
-    text-shadow: 0 0 5px black;
-}
-
+/* Skeleton */
+body, html {overflow: hidden;}
+body {font-size: 62.5%;}
+* {margin:0;padding:0;}
+.parallax {font-size: 200%;}
 .parallax {
     height: 700px; /* fallback for older browsers */
     height: 100vh;
@@ -37,16 +12,12 @@ body {
     -webkit-perspective: 300px;
     perspective: 300px;
 }
-
 .parallax__group {
     position: relative;
     height: 700px; /* fallback for older browsers */
     height: 100vh;
     min-height: 700px;
-/*    -webkit-transform-style: preserve-3d;*/
-/*    transform-style: preserve-3d;*/
 }
-
 .parallax__layer {
     position: absolute;
     top: 0;
@@ -54,81 +25,44 @@ body {
     right: 0;
     bottom: 0;
 }
-
 .parallax__layer--base {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
     z-index: 4;
 }
-
 .parallax__layer--back {
     -webkit-transform: translateZ(-300px) scale(2);
     transform: translateZ(-300px) scale(2);
     z-index: 3;
 }
-
-#group1 {
-    z-index: 5; /* slide over group 2 */
-}
+#group1 {z-index: 5;} /* slide over group 2 */
 #group1 .parallax__layer--base {
-    background-color: white;
+    background: white url(../newimg/stamp.svg.png) no-repeat scroll center;
+    background-size: 60vh;
 }
-#group1 h1 {
-    margin-top: 10%;
-    font-size: 5em;
-    letter-spacing: 0.2em;
-    text-align: center;
-}
-#group1 p {
-    text-align: center;
-    font-size: 2em;
-    color: #555;
-}
-
-#group2 {
-    z-index: 3; /* slide under groups 1 and 3 */
-}
+#group2 {z-index: 3;} /* slide under groups 1 and 3 */
 #group2 .parallax__layer--back {
     background-image: url(../newimg/headline.jpg);
     background-size: 100% 100vh;
 }
-
-#group3 {
-    z-index: 4; /* slide over group 2 and 4 */
-}
-#group3 .parallax__layer--base {
-    background: rgb(153,216,101);
-}
-
-#group4 {
-    z-index: 2; /* slide under group 3 and 5 */
-}
+#group3 {z-index: 4;} /* slide over group 2 and 4 */
+#group3 .parallax__layer--base {background: rgb(153,216,101);}
+#group4 {z-index: 2;} /* slide under group 3 and 5 */
 #group4 .parallax__layer--back {
     background-image: url(../newimg/entertainment.jpg);
     background-size: 100% 100vh;
 }
-
-#group5 {
-    z-index: 3; /* slide over group 4 and 6 */
-}
-#group5 .parallax__layer--base {
-    background: rgb(214,229,100);
-}
-
-#group6 {
-    z-index: 2; /* slide under group 5 and 7 */
-}
+#group5 {z-index: 3;} /* slide over group 4 and 6 */
+#group5 .parallax__layer--base {background: rgb(214,229,100);}
+#group6 {z-index: 2;} /* slide under group 5 and 7 */
 #group6 .parallax__layer--back {
     background-image: url(../newimg/sponsors.jpg);
     background-size: 100% 100vh;
 }
+#group7 {z-index: 3;} /* slide over group 7 */
+#group7 .parallax__layer--base {background: rgb(255,241,100);}
 
-#group7 {
-    z-index: 3; /* slide over group 7 */
-}
-#group7 .parallax__layer--base {
-    background: rgb(255,241,100);
-}
+/* usr */
 
 #foottop {
     position: absolute;
@@ -141,14 +75,72 @@ body {
     z-index: 1000;
 }
 
+#header {
+    text-shadow: 0 0 5px white;
+    text-align: center;
+}
+
+#header h1 {
+    font-size: 5em;
+    letter-spacing: 0.2em;
+}
+
+#header p {
+    font-size: 2em;
+    color: #333;
+}
+
 .centre {
     width: 100%;
+    max-width: 1280px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
     max-height: 700px;
     overflow: scroll;
+}
+
+.textblock {
+    font-family: sans-serif;
+    text-align: center;
+    max-width: 1200px;
+}
+
+.shadowed {
+    color: white;
+    text-shadow: 0 0 5px black;
+}
+
+.textblock h1 {
+    letter-spacing: 0.1em;
+    padding-bottom: 20px;
+    font-size: 3em;
+    border-bottom: 1px solid white;
+}
+
+.textblock p {
+    padding-top: 30px;
+    font-size: 1.2em;
+}
+
+
+
+#buytickets {
+    padding: 15px 40px;
+    background-color: #09F;
+    border-radius: 5px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    display: inline-block;
+    font-size: 2em;
+    box-shadow: 0 0 5px black;
+    transition: all 0.2s ease-in-out;
+}
+
+#buytickets:hover {
+    background-color: #5DF;
 }
 
 #leftcontact {
@@ -182,7 +174,7 @@ body {
     padding: 0;
     margin: 0;
     font-weight: 400;
-    font-size: 1.3em;
+    font-size: 1.1em;
 }
 
 .Deet h3 {
