--- a/css/newindex2.css
+++ b/css/newindex2.css
@@ -137,9 +137,16 @@ body {font-size: 62.5%;}
 
 .postcard {
     /*http://www.bittbox.com/freebies/freebie-friday-6-vintage-paper-photoshop-patterns*/
-    background-image: url("../newimg/dirtvint.png"), url("../newimg/postcard border.png"), url(../newimg/BB_SeamlessPaper_05.jpg);
-    background-repeat: repeat, repeat-x, repeat;
+/*    background-image: url("../newimg/dirtvint.png"), url("../newimg/postcard border.png"), url(../newimg/BB_SeamlessPaper_05.jpg);*/
+    background-image: url("../newimg/dirtvint.png"), url(../newimg/BB_SeamlessPaper_05.jpg);
+    background-repeat: repeat, repeat;
     border-radius: 2px;
+    border-style: solid;
+border-width: 38px;
+-moz-border-image: url("../newimg/postcard border img.png") 38 round;
+-webkit-border-image: url("../newimg/postcard border img.png") 38 round;
+-o-border-image: url("../newimg/postcard border img.png") 38 round;
+border-image: url("../newimg/postcard border img.png") 38 round;
     letter-spacing: 0.1em;
     box-shadow: 2px 2px 10px black;
     width: 70%;
@@ -149,7 +156,6 @@ body {font-size: 62.5%;}
     height: 600px;
     font-family: 'Slabo 27px', serif;
     text-shadow: 0.5px 0.5px 1px #444;
-    box-shadow: 0 0 100px rgba(0, 0, 0, 0.3) inset;
 }
 
 .postcard img {
