--- a/css/index.css
+++ b/css/index.css
@@ -39,22 +39,25 @@ body {font-size: 62.5%;}
 #group1 .parallax__layer--base {}
 #group2 {z-index: 3;} /* slide under groups 1 and 3 */
 #group2 .parallax__layer--back {
-    background-image: url(../imgs/headline.jpg);
-    background-size: 100% 100vh;
+/*    background-image: url(../imgs/headline.jpg);*/
+/*    background-size: 100% 100vh;*/
+    background-image: url(../imgs/skulls.png);
 }
 #group3 {z-index: 4;} /* slide over group 2 and 4 */
 #group3 .parallax__layer--base {background: rgba(153,216,101, 0);}
 #group4 {z-index: 2;} /* slide under group 3 and 5 */
 #group4 .parallax__layer--back {
-    background-image: url(../imgs/entertainment.jpg);
-    background-size: 100% 100vh;
+/*    background-image: url(../imgs/entertainment.jpg);*/
+/*    background-size: 100% 100vh;*/
+    background-image: url(../imgs/skulls.png);
 }
 #group5 {z-index: 3;} /* slide over group 4 and 6 */
 #group5 .parallax__layer--base {background: rgba(214,229,100, 0);}
 #group6 {z-index: 2;} /* slide under group 5 and 7 */
 #group6 .parallax__layer--back {
-    background-image: url(../imgs/sponsors.jpg);
-    background-size: 100% 100vh;
+/*    background-image: url(../imgs/sponsors.jpg);*/
+/*    background-size: 100% 100vh;*/
+    background-image: url(../imgs/skulls.png);
 }
 #group7 {z-index: 3;} /* slide over group 7 */
 #group7 .parallax__layer--base {background: rgb(255,241,100);}
